--- a/movie/src/index.css
+++ b/movie/src/index.css
@@ -16,7 +16,7 @@
 
   --font-dm-sans: DM Sans, sans-serif;
 
-  --breakpoint-xs: 480px;
+  --breakpoint-xs:480px;
 
   --background-image-hero-pattern: url("./public/assets/BG.png");
 }
@@ -51,7 +51,7 @@
 
 @layer components {
   .pattern {
-    @apply bg-hero-pattern w-screen h-screen bg-center bg-cover absolute z-0 ;
+    @apply bg-hero-pattern w-full h-screen bg-center bg-cover absolute z-0 ;
   }
 
   .wrapper {
